Comment out blog section in index.html

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
 
 
             <!-- Blog Start -->
-            <div class="blog">
+            <!-- <div class="blog">
                 <div class="container">
                     <div class="section-header">
                         <p>Latest From Blog</p>
@@ -694,7 +694,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Blog End -->
 
 
