--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-9">
-                            <h2>Get A Free Cleaning Service</h2>
+                            <h2>Get A Free Cleaning Service Today</h2>
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit
                             </p>
