Refactor navigation links across multiple pages to improve consistency and clarity; update FAQ content for better user understanding.

--- a/contact.html
+++ b/contact.html
@@ -65,17 +65,8 @@
                                     <div class="navbar-nav ml-auto">
                                         <a href="index.html" class="nav-item nav-link">Home</a>
                                         <a href="about.html" class="nav-item nav-link">About</a>
-                                        <a href="service.html" class="nav-item nav-link">Service</a>
-                                        <a href="portfolio.html" class="nav-item nav-link">Project</a>
-                                        <a href="single.html" class="nav-item nav-link">Single</a>
-                                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
-                                        <div class="nav-item dropdown">
-                                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dropdown</a>
-                                            <div class="dropdown-menu">
-                                                <a href="#" class="dropdown-item">Sub Item 1</a>
-                                                <a href="#" class="dropdown-item">Sub Item 2</a>
-                                            </div>
-                                        </div>
+                                        <a href="index.html#services" class="nav-item nav-link">Services</a>
+                                        <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                                         <a href="index.html#quote-form" class="btn">Get A Quote</a>
                                     </div>
                                 </div>
@@ -114,64 +105,68 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="faqs">
+                                <!-- <div class="section-header left">
+                                    <p>You Might Ask</p>
+                                    <h2>Frequently Asked Questions</h2>
+                                </div> -->
                                 <div id="accordion">
                                     <div class="card">
                                         <div class="card-header">
                                             <a class="card-link collapsed" data-toggle="collapse" href="#collapseOne" aria-expanded="true">
-                                                <span>1</span> Lorem ipsum dolor sit amet?
+                                                <span>1</span> What types of cleaning services do you offer?
                                             </a>
                                         </div>
                                         <div id="collapseOne" class="collapse show" data-parent="#accordion">
                                             <div class="card-body">
-                                                Our fumigation services are designed to eliminate pests and ensure a safe environment. Our expert team uses advanced techniques to provide effective pest control solutions.
+                                                We offer a wide range of services including residential cleaning, office cleaning, floor and carpet cleaning, window cleaning, post-construction cleaning, and specialized deep cleaning. Custom packages are available to suit your needs.
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card">
                                         <div class="card-header">
                                             <a class="card-link" data-toggle="collapse" href="#collapseTwo">
-                                                <span>2</span> Lorem ipsum dolor sit amet?
+                                                <span>2</span> Are your cleaning products safe for children and pets?
                                             </a>
                                         </div>
                                         <div id="collapseTwo" class="collapse" data-parent="#accordion">
                                             <div class="card-body">
-                                                Our glass cleaning services ensure that your windows and glass surfaces are spotless and clear. Our professionals use eco-friendly products to maintain the integrity of your glass.
+                                                Yes! We use eco-friendly and non-toxic cleaning products that are safe for your family, pets, and the environment. If you have specific sensitivities, let us know and we'll accommodate your needs.
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card">
                                         <div class="card-header">
                                             <a class="card-link" data-toggle="collapse" href="#collapseThree">
-                                                <span>3</span> Lorem ipsum dolor sit amet?
+                                                <span>3</span> Do I need to be home during the cleaning?
                                             </a>
                                         </div>
                                         <div id="collapseThree" class="collapse" data-parent="#accordion">
                                             <div class="card-body">
-                                                Our carpet cleaning services help maintain the hygiene and appearance of your carpets. Our deep cleaning methods remove dirt, allergens, and stains effectively.
+                                                It's up to you! Many clients provide us with access instructions and return to a sparkling clean space. If you prefer to be present, we're happy to work around your schedule.
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card">
                                         <div class="card-header">
                                             <a class="card-link" data-toggle="collapse" href="#collapseFour">
-                                                <span>4</span> Lorem ipsum dolor sit amet?
+                                                <span>4</span> Are your cleaners insured and background-checked?
                                             </a>
                                         </div>
                                         <div id="collapseFour" class="collapse" data-parent="#accordion">
                                             <div class="card-body">
-                                                Our landscaping services enhance the aesthetic appeal of your outdoor spaces. Our team designs and maintains beautiful gardens and landscapes tailored to your preferences.
+                                                Absolutely. All our team members are fully insured, trained, and background-checked for your peace of mind and security.
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card">
                                         <div class="card-header">
-                                            <a class="card-link" data-toggle="collapse" href="#collapseFour">
-                                                <span>5</span> Lorem ipsum dolor sit amet?
+                                            <a class="card-link" data-toggle="collapse" href="#collapseFive">
+                                                <span>5</span> How do I book a cleaning or get a quote?
                                             </a>
                                         </div>
-                                        <div id="collapseFour" class="collapse" data-parent="#accordion">
+                                        <div id="collapseFive" class="collapse" data-parent="#accordion">
                                             <div class="card-body">
-                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non.
+                                                You can easily request a quote or book a cleaning through our website's "Get A Quote" form, or contact us directly by phone or email. We'll respond promptly to confirm your booking and answer any questions.
                                             </div>
                                         </div>
                                     </div>
