--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-6">
                             <div class="about-img">
-                                <img src="img/about.jpg" alt="Image">
+                                <img src="img/ourteam.png" alt="Image">
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
