--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-6">
                             <div class="about-img">
-                                <img src="img/about.jpg" alt="Image">
+                                <img src="img/ourteam.png" alt="Image">
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
@@ -344,7 +344,7 @@
                                 <p>You Might Ask</p>
                                 <h2>Frequently Asked Questions</h2>
                             </div>
-                            <img src="img/faqs.jpg" alt="Image">
+                            <img src="img/couplepose.png" alt="Image">
                         </div>
                         <div class="col-md-7">
                             <div id="accordion">
