Add aria-label to navbar toggler for accessibility; include jQuery and Bootstrap JS for enhanced functionality

--- a/index.html
+++ b/index.html
@@ -381,6 +381,8 @@
         includeHTML('header-include', 'header.html');
         includeHTML('footer-include', 'footer.html');
         </script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <script>
         document.getElementById('quote-form').addEventListener('submit', function(e) {
             e.preventDefault();
