Update company story in about.html for clarity and engagement; comment out team section for future revisions.

--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
                                         <div class="story-text">
                                             <h3>Launched our company on 01 Jan 2018</h3>
                                             <p>
-                                                Lorem ipsum dolor sit amet elit. Proin euismod nibh in convallis. Nam vitae posuere tortor, et imperdiet nunc. Praesent nisl nulla, fringilla eu ornare, dignissim vitae ipsum.
+                                                It all started in 2018 when we decided to start our own cleaning company. We were tired of the traditional cleaning companies that were not reliable and did not provide the quality of service we wanted. We wanted to provide a service that was reliable, efficient and affordable.
                                             </p>
                                         </div>
                                     </div>
@@ -252,7 +252,7 @@
 
 
             <!-- Team Start -->
-            <div class="team">
+            <!-- <div class="team">
                 <div class="container">
                     <div class="section-header">
                         <p>Team Member</p>
@@ -329,7 +329,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Team End -->
         </div>
         <div id="footer-include"></div>
