--- a/index.html
+++ b/index.html
@@ -370,8 +370,13 @@
             </div>
             <!-- FAQs End -->
         </div>
-        <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-        <div id="footer-include"></div>
+        <a href="#" id="back-to-top-index" style="position: fixed; display: none; background: #32CD32; color: #000; width: 48px; height: 48px; text-align: center; line-height: 48px; font-size: 22px; border-radius: 50%; right: 15px; bottom: 15px; z-index: 9999; box-shadow: 0 2px 8px rgba(50,205,50,0.10); transition: background 0.5s;">
+            <i class="fa fa-chevron-up"></i>
+        </a>
+        <style>
+        /* Hide the default square back-to-top button from the footer on index.html */
+        #footer-include .back-to-top { display: none !important; }
+        </style>
         <script>
         function includeHTML(id, file) {
             fetch(file)
@@ -400,6 +405,21 @@
                 }
             });
         });
+        </script>
+        <script>
+        // Show/hide the circular back-to-top button
+        window.addEventListener('scroll', function() {
+            var btn = document.getElementById('back-to-top-index');
+            if (window.scrollY > 200) {
+                btn.style.display = 'block';
+            } else {
+                btn.style.display = 'none';
+            }
+        });
+        document.getElementById('back-to-top-index').onclick = function(e) {
+            e.preventDefault();
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        };
         </script>
     </body>
 </html>
