Add map section to contact.html for location display; update service links in index.html to direct to service details page; create service-details.html and service-data.js for dynamic service information rendering.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                 <p>
                                     Our post construction cleaning service ensures your new or renovated space is spotless, safe, and ready for use.
                                 </p>
-                                <a class="btn" href="">Learn More</a>
+                                <a class="btn" href="service-details.html?service=postconstruction">Learn More</a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
@@ -93,7 +93,7 @@
                                 <p>
                                     Fumigation services are essential for eliminating pests and ensuring a safe environment. Our expert team uses advanced techniques to provide effective pest control solutions.
                                 </p>
-                                <a class="btn" href="">Learn More</a>
+                                <a class="btn" href="service-details.html?service=fumigation">Learn More</a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
@@ -103,7 +103,7 @@
                                 <p>
                                     We provide thorough residential cleaning to keep your home fresh, healthy, and sparkling clean.
                                 </p>
-                                <a class="btn" href="">Learn More</a>
+                                <a class="btn" href="service-details.html?service=residential">Learn More</a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
@@ -113,7 +113,7 @@
                                 <p>
                                     Our office cleaning service creates a clean, productive, and welcoming workspace for your team and clients.
                                 </p>
-                                <a class="btn" href="">Learn More</a>
+                                <a class="btn" href="service-details.html?service=office">Learn More</a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
@@ -123,7 +123,7 @@
                                 <p>
                                     Keep your pool crystal clear and safe with our professional pool cleaning and maintenance services.
                                 </p>
-                                <a class="btn" href="">Learn More</a>
+                                <a class="btn" href="service-details.html?service=pool">Learn More</a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
@@ -133,7 +133,7 @@
                                 <p>
                                     Our carpet cleaning services remove dirt, allergens, and stains, leaving your carpets fresh and hygienic.
                                 </p>
-                                <a class="btn" href="">Learn More</a>
+                                <a class="btn" href="service-details.html?service=carpet">Learn More</a>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
@@ -143,7 +143,7 @@
                                 <p>
                                     Restore the beauty and comfort of your sofas with our deep sofa-set cleaning service.
                                 </p>
-                                <a class="btn" href="">Learn More</a>
+                                <a class="btn" href="service-details.html?service=sofa">Learn More</a>
                             </div>
                         </div>
                     </div>
