--- a/contact.html
+++ b/contact.html
@@ -147,6 +147,26 @@
             </div>
             <!-- Contact End -->
 
+            <!-- Map Section Start -->
+            <div class="map-section" style="padding: 40px 0; background: #f9f9f9;">
+                <div class="container">
+                    <div class="section-header">
+                        <p>Our Location</p>
+                        <h2>Find Us at Next Gen Mall, South B, Nairobi</h2>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-12">
+                            <div style="width: 100%; height: 400px; border-radius: 12px; overflow: hidden; box-shadow: 0 2px 16px rgba(0,0,0,0.08);">
+                                <iframe
+                                    src="https://www.google.com/maps?q=Next+Gen+Mall,+South+B,+Nairobi,+Kenya&output=embed"
+                                    width="100%" height="100%" frameborder="0" style="border:0; min-height: 400px; width: 100%;" allowfullscreen="" aria-hidden="false" tabindex="0" title="Next Gen Mall, South B, Nairobi, Kenya Location"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Map Section End -->
+
         </div>
         <div id="footer-include"></div>
         <script>
