--- a/footer.html
+++ b/footer.html
@@ -5,9 +5,9 @@
                 <div class="col-md-6 col-lg-3">
                     <div class="footer-contact">
                         <h2>Get In Touch</h2>
-                        <p><i class="fa fa-map-marker-alt"></i>123 Street, New York, USA</p>
+                        <p><i class="fa fa-map-marker-alt"></i>NextGen mall, South B, Nairobi</p>
                         <p><i class="fa fa-phone-alt"></i>+012 345 67890</p>
-                        <p><i class="fa fa-envelope"></i>info@example.com</p>
+                        <p><i class="fa fa-envelope"></i>info@aycleaninglimited.com</p>
                         <div class="footer-social">
                             <a href=""><i class="fab fa-twitter"></i></a>
                             <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -71,3 +71,43 @@
     </div>
     <!-- Footer End -->
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a> 
+
+    <!-- Floating WhatsApp Button Start -->
+    <a href="https://wa.me/01234567890" target="_blank" rel="noopener" aria-label="Chat with us on WhatsApp" class="whatsapp-float">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    <style>
+        .whatsapp-float {
+            position: fixed;
+            width: 60px;
+            height: 60px;
+            bottom: 90px;
+            right: 30px;
+            background-color: #25d366;
+            color: #fff;
+            border-radius: 50%;
+            text-align: center;
+            font-size: 32px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+            z-index: 9999;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background 0.2s;
+        }
+        .whatsapp-float:hover, .whatsapp-float:focus {
+            background-color: #128c7e;
+            color: #fff;
+            text-decoration: none;
+        }
+        @media (max-width: 576px) {
+            .whatsapp-float {
+                width: 48px;
+                height: 48px;
+                font-size: 24px;
+                bottom: 80px;
+                right: 16px;
+            }
+        }
+    </style>
+    <!-- Floating WhatsApp Button End -->
