--- a/header.html
+++ b/header.html
@@ -38,7 +38,7 @@
                             <div class="navbar-nav ml-auto">
                                 <a href="index.html" class="nav-item nav-link active">Home</a>
                                 <a href="about.html#about" class="nav-item nav-link">About</a>
-                                <a href="#services" class="nav-item nav-link">Services</a>
+                                <a href="index.html#services" class="nav-item nav-link">Services</a>
                                 <a href="contact.html#contact" class="nav-item nav-link">Contact Us</a>
                                 <a href="#quote-form" class="btn">Get A Quote</a>
                             </div>
