Revamp About section in about.html and index.html to reflect company values, vision, and mission; introduce new Goals, Vision, Mission, and Core Values sections for enhanced clarity. Add AY Company Profile markdown file detailing services and company information. Update service descriptions and images in service.html and service-data.js for improved user experience.

--- a/service.html
+++ b/service.html
@@ -121,6 +121,106 @@
                                 <a class="btn" href="">Learn More</a>
                             </div>
                         </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-1.jpg" alt="High Pressure Cleaning">
+                                <h3>High Pressure Cleaning</h3>
+                                <p>
+                                    Powerful cleaning for stubborn dirt and grime on hard surfaces, driveways, and exteriors.
+                                </p>
+                                <a class="btn" href="service-details.html?service=highpressure">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-2.jpg" alt="Waste Management Solutions">
+                                <h3>Waste Management Solutions</h3>
+                                <p>
+                                    Comprehensive waste collection, sorting, and disposal for homes and businesses.
+                                </p>
+                                <a class="btn" href="service-details.html?service=waste">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-3.jpg" alt="Garbage Collection & Disposal">
+                                <h3>Garbage Collection & Disposal</h3>
+                                <p>
+                                    Reliable garbage collection and safe disposal services for all types of waste.
+                                </p>
+                                <a class="btn" href="service-details.html?service=garbage">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-4.jpg" alt="Electronic Equipment Cleaning">
+                                <h3>Electronic Equipment Cleaning</h3>
+                                <p>
+                                    Specialized cleaning for computers, servers, and sensitive electronic devices.
+                                </p>
+                                <a class="btn" href="service-details.html?service=electronics">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/landscaping.png" alt="Landscaping & Gardening">
+                                <h3>Landscaping & Gardening</h3>
+                                <p>
+                                    Design, maintenance, and beautification of gardens and outdoor spaces.
+                                </p>
+                                <a class="btn" href="service-details.html?service=landscaping">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-1.jpg" alt="Renovations, Repairs & Painting">
+                                <h3>Renovations, Repairs & Painting</h3>
+                                <p>
+                                    Professional renovations, repairs, and painting for residential and commercial properties.
+                                </p>
+                                <a class="btn" href="service-details.html?service=renovations">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-2.jpg" alt="Event Cleaning & Garden Services">
+                                <h3>Event Cleaning & Garden Services</h3>
+                                <p>
+                                    Pre- and post-event cleaning, plus garden care for all types of events.
+                                </p>
+                                <a class="btn" href="service-details.html?service=eventcleaning">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-3.jpg" alt="Window Cleaning & Wall Dusting">
+                                <h3>Window Cleaning & Wall Dusting</h3>
+                                <p>
+                                    Streak-free window cleaning and thorough wall dusting for a spotless finish.
+                                </p>
+                                <a class="btn" href="service-details.html?service=windowcleaning">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-4.jpg" alt="Polishing Wooden Floors">
+                                <h3>Polishing Wooden Floors</h3>
+                                <p>
+                                    Restore and maintain the shine and durability of your wooden floors.
+                                </p>
+                                <a class="btn" href="service-details.html?service=woodpolishing">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-1.jpg" alt="Provision of Washroom Equipment & Consumables">
+                                <h3>Provision of Washroom Equipment & Consumables</h3>
+                                <p>
+                                    Supply and installation of washroom equipment and consumables for hygiene and convenience.
+                                </p>
+                                <a class="btn" href="service-details.html?service=washroomequip">Learn More</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
