--- a/index.html
+++ b/index.html
@@ -42,29 +42,21 @@
             
             
             <!-- About Start -->
-            <!-- <div class="about">
+            <section class="about-section section-padding bg-light">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-md-6">
-                            <div class="about-img">
-                                <img src="img/ourteam.png" alt="Image">
-                            </div>
-                        </div>
-                        <div class="col-lg-7 col-md-6">
+                    <div class="row align-items-center">
+                        <div class="col-lg-12">
                             <div class="about-text">
-                                <h2><span>10</span> Years Experience</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
-                                </p>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem. Curabitur non nisl nec nisi scelerisque maximus. Aenean consectetur convallis porttitor. Aliquam interdum at lacus non blandit.
-                                </p>
-                                <a class="btn" href="">Learn More</a>
+                                <h2>Who We Are</h2>
+                                <p>AY CLEANING LIMITED was started by a team of highly qualified, skilled and determined professionals, to set an outstanding trend in providing complete commercial, residential & industrial cleaning, in addition to support services management. This is delivered through the use of well trained, supervised, world-class equipment and proven chemicals. Since its establishment, it has diversified and leveraged its position in terms of offering unparalleled range of services to meet its esteemed customer's most crucial needs.</p>
+                                <p>With our well designed system and professional staff we serve our clients to their satisfaction. We have come to appreciate that time, quality and excellence render a competitive advantage needed for every entity to prosper and that's why we ensure upgrading our systems and links to deliver the best and timely for your advantage.</p>
+                                <p>In the current global economy and entity operating in isolation has got a limited space for success that's why we partner with vibrant and reliable manufacturing and distributing companies so as to provide you with our professional services and products to enable you meet your needs.</p>
+                                <blockquote class="blockquote">With our insatiable appetite for new challenges and commitment to ongoing progress, you can expect great things from the future of AY Cleaning Limited.</blockquote>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </section>
             <!-- About End -->
 
 
@@ -144,6 +136,106 @@
                                     Restore the beauty and comfort of your sofas with our deep sofa-set cleaning service.
                                 </p>
                                 <a class="btn" href="service-details.html?service=sofa">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-1.jpg" alt="High Pressure Cleaning">
+                                <h3>High Pressure Cleaning</h3>
+                                <p>
+                                    Powerful cleaning for stubborn dirt and grime on hard surfaces, driveways, and exteriors.
+                                </p>
+                                <a class="btn" href="service-details.html?service=highpressure">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-2.jpg" alt="Waste Management Solutions">
+                                <h3>Waste Management Solutions</h3>
+                                <p>
+                                    Comprehensive waste collection, sorting, and disposal for homes and businesses.
+                                </p>
+                                <a class="btn" href="service-details.html?service=waste">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-3.jpg" alt="Garbage Collection & Disposal">
+                                <h3>Garbage Collection & Disposal</h3>
+                                <p>
+                                    Reliable garbage collection and safe disposal services for all types of waste.
+                                </p>
+                                <a class="btn" href="service-details.html?service=garbage">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-4.jpg" alt="Electronic Equipment Cleaning">
+                                <h3>Electronic Equipment Cleaning</h3>
+                                <p>
+                                    Specialized cleaning for computers, servers, and sensitive electronic devices.
+                                </p>
+                                <a class="btn" href="service-details.html?service=electronics">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/landscaping.png" alt="Landscaping & Gardening">
+                                <h3>Landscaping & Gardening</h3>
+                                <p>
+                                    Design, maintenance, and beautification of gardens and outdoor spaces.
+                                </p>
+                                <a class="btn" href="service-details.html?service=landscaping">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-1.jpg" alt="Renovations, Repairs & Painting">
+                                <h3>Renovations, Repairs & Painting</h3>
+                                <p>
+                                    Professional renovations, repairs, and painting for residential and commercial properties.
+                                </p>
+                                <a class="btn" href="service-details.html?service=renovations">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-2.jpg" alt="Event Cleaning & Garden Services">
+                                <h3>Event Cleaning & Garden Services</h3>
+                                <p>
+                                    Pre- and post-event cleaning, plus garden care for all types of events.
+                                </p>
+                                <a class="btn" href="service-details.html?service=eventcleaning">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-3.jpg" alt="Window Cleaning & Wall Dusting">
+                                <h3>Window Cleaning & Wall Dusting</h3>
+                                <p>
+                                    Streak-free window cleaning and thorough wall dusting for a spotless finish.
+                                </p>
+                                <a class="btn" href="service-details.html?service=windowcleaning">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-4.jpg" alt="Polishing Wooden Floors">
+                                <h3>Polishing Wooden Floors</h3>
+                                <p>
+                                    Restore and maintain the shine and durability of your wooden floors.
+                                </p>
+                                <a class="btn" href="service-details.html?service=woodpolishing">Learn More</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="img/service-1.jpg" alt="Provision of Washroom Equipment & Consumables">
+                                <h3>Provision of Washroom Equipment & Consumables</h3>
+                                <p>
+                                    Supply and installation of washroom equipment and consumables for hygiene and convenience.
+                                </p>
+                                <a class="btn" href="service-details.html?service=washroomequip">Learn More</a>
                             </div>
                         </div>
                     </div>
